<resources>
    <string name="app_name">Joc Trivia</string>
    <string name="title">Trivia</string>
    <string name="true_title">TRUE</string>
    <string name="false_title">FALSE</string>
    <string name="next_button">next_button</string>
    <string name="previous_button">previous_button</string>
    <string name="counter_questions">No of question</string>
    <string name="textview">TextView</string>
    <string name="correct_answer">Correct</string>
    <string name="wrong_answer">Wrong</string>
    <string name="text_score">score</string>
    <string name="highest_score">Highest score</string>
    <string name="reset_score">Reset Score</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>